airflow/logs/dag_id=nba_transform_to_dwh/run_id=manual__2025-06-20T130910.150088+0000/task_id=load_dim_time/attempt=1.log
[2025-06-20T13:09:17.527+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-06-20T13:09:17.572+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: nba_transform_to_dwh.load_dim_time manual__2025-06-20T13:09:10.150088+00:00 [queued]>
[2025-06-20T13:09:17.590+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: nba_transform_to_dwh.load_dim_time manual__2025-06-20T13:09:10.150088+00:00 [queued]>
[2025-06-20T13:09:17.592+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2025-06-20T13:09:17.640+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): load_dim_time> on 2025-06-20 13:09:10.150088+00:00
[2025-06-20T13:09:17.653+0000] {standard_task_runner.py:63} INFO - Started process 1464 to run task
[2025-06-20T13:09:17.659+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'nba_transform_to_dwh', 'load_dim_time', 'manual__2025-06-20T13:09:10.150088+00:00', '--job-id', '225', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp4g87sbqu']
[2025-06-20T13:09:17.661+0000] {standard_task_runner.py:91} INFO - Job 225: Subtask load_dim_time
[2025-06-20T13:09:17.789+0000] {task_command.py:426} INFO - Running <TaskInstance: nba_transform_to_dwh.load_dim_time manual__2025-06-20T13:09:10.150088+00:00 [running]> on host 5ea278fdf3a6
[2025-06-20T13:09:17.938+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='nba_transform_to_dwh' AIRFLOW_CTX_TASK_ID='load_dim_time' AIRFLOW_CTX_EXECUTION_DATE='2025-06-20T13:09:10.150088+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-06-20T13:09:10.150088+00:00'
[2025-06-20T13:09:17.940+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-06-20T13:09:17.958+0000] {etl_pipeline.py:497} INFO - Ensuring dimension table 'dimtime' exists...
[2025-06-20T13:09:17.960+0000] {etl_pipeline.py:503} ERROR - Failed to create or load dimension 'dimtime'. Error: syntax error at or near ")"
LINE 6:     );
            ^

[2025-06-20T13:09:17.961+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-06-20T13:09:17.962+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 498, in fetch_dim_time
    cursor.execute(create_table_query)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 6:     );
            ^

[2025-06-20T13:09:17.978+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=nba_transform_to_dwh, task_id=load_dim_time, run_id=manual__2025-06-20T13:09:10.150088+00:00, execution_date=20250620T130910, start_date=20250620T130917, end_date=20250620T130917
[2025-06-20T13:09:18.017+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 225 for task load_dim_time (syntax error at or near ")"
LINE 6:     );
            ^
; 1464)
[2025-06-20T13:09:18.034+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-06-20T13:09:18.052+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-06-20T13:09:18.085+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
